Fix z-index bug on ::before and ::after elements on baap's on our-work.html

--- a/local_static/css/_our-work.scss
+++ b/local_static/css/_our-work.scss
@@ -83,7 +83,7 @@
           padding: 0 calc(0.1rem + 0.1vw);
           position: absolute;
           top: calc(0.25rem + 0.25vw);
-          z-index: 100;
+          z-index: 1;
         }
       }
       & .section-1-baap-group-after {
@@ -109,7 +109,7 @@
           padding: 0 calc(0.1rem + 0.1vw);
           position: absolute;
           top: calc(0.25rem + 0.25vw);
-          z-index: 100;
+          z-index: 1;
         }
       }
       & img {
